# ActixUdemy

./: .gitignore  Cargo.toml  README.md
practice/: Cargo.toml
practice/migrations/: 20250628175634_profile_table.sql  20250628180014_message_table.sql
practice/src/: main.rs
src/: error.rs  main.rs  sqlx_example.rs
src/utility/: api_response.rs
tracing-config/: Cargo.toml
tracing-config/src/: lib.rs
twitter-clone/: Cargo.toml
twitter-clone/migrations/: 20250629063200_tables.sql  20250629063306_circle_tables.sql
twitter-clone/src/: api_response.rs  app_state.rs  common.rs  error.rs  lib.rs  main.rs
twitter-clone/src/common/: entities.rs
twitter-clone/src/common/entities/: base.rs
twitter-clone/src/common/entities/messages/: model.rs  repo.rs
twitter-clone/src/common/entities/profile/: model.rs  repo.rs
twitter-clone/src/common_tests/: mod.rs
twitter-clone/src/routes/: mod.rs  msg_routes.rs  profile_routes.rs
twitter-clone/src/routes/handler/: mod.rs  msg_handlers.rs  profile_handlers.rs
twitter-clone/src/schemas/: message.rs  mod.rs  profile.rs
