[package]
name = "practice"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
authors.workspace = true


[lints]
workspace = true


[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
fake = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid = { workspace = true, features = ["v4"] }
