[package]
name = "tracing-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true


[dependencies]
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }