[package]
name = "twitter-clone"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "twitter-server"

[lints]
workspace = true


[dependencies]
tracing-config = { path = "../tracing-config" }
actix-web = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = { workspace = true }
fake = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
mockall = { workspace = true }
reqwest = { workspace = true }
serde_repr = { workspace = true }
actix-multipart = { workspace = true }
